--- a/data formatter v2.html
+++ b/data formatter v2.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Data Formatter</title>
+	<link rel="icon" type="image/png" href="resources/img/anya_icon.jpg">
     <style>
 
     </style>
