--- a/generateReportCSV.html
+++ b/generateReportCSV.html
@@ -18,17 +18,24 @@
 <textarea id="csvOutput" placeholder="CSV output..." readonly></textarea>
 
 <script>
+    let sourceSystem = '';
+    let serviceCode = '';
+
     function convertJsonToCSV() {
         const jsonInput = document.getElementById('jsonInput').value;
         try {
             const jsonArray = JSON.parse(jsonInput);
+            if (jsonArray.length > 0) {
+                sourceSystem = jsonArray[0].sourceSystem;
+                serviceCode = jsonArray[0].serviceCode.replace(/:/g, '_'); // Replace colons with underscores
+            }
             let csvString = jsonArray.map(jsonObject =>
-                `D|${formatValue(jsonObject, 'transactionId')}|${formatValue(jsonObject, 'sourceSystem')}|${formatValue(jsonObject, 'serviceCode')}|${formatValue(jsonObject, 'transactionDateTime')}|${formatValue(jsonObject, 'paymentPurpose')}|${formatValue(jsonObject, 'remark')}|${formatValue(jsonObject, 'typeOfSender')}|${formatValue(jsonObject, 'transactionAmount')}|${formatNestedValue(jsonObject.fromAccountInstruction, 'bankCode')}|${formatNestedValue(jsonObject.fromAccountInstruction, 'accountNumber')}|${formatNestedValue(jsonObject.fromAccountInstruction, 'isGl')}|${formatNestedValue(jsonObject.fromAccountInstruction, 'glNumber')}|${formatNestedValue(jsonObject.fromAccountInstruction, 'accountName')}|${formatNestedValue(jsonObject.fromAccountInstruction, 'taxId')}|${formatNestedValue(jsonObject.fromAccountInstruction, 'statementReference')}|${formatNestedValue(jsonObject.toAccountInstruction && jsonObject.toAccountInstruction.proxyInformation, 'proxyType')}|${formatNestedValue(jsonObject.toAccountInstruction && jsonObject.toAccountInstruction.proxyInformation, 'proxyValue')}|${formatNestedValue(jsonObject.toAccountInstruction, 'bankCode')}|${formatNestedValue(jsonObject.toAccountInstruction, 'accountNumber')}|${formatNestedValue(jsonObject.toAccountInstruction, 'isGl')}|${formatNestedValue(jsonObject.toAccountInstruction, 'glNumber')}|${formatNestedValue(jsonObject.toAccountInstruction, 'accountName')}|${formatNestedValue(jsonObject.toAccountInstruction, 'statementReference')}|${formatNestedValue(jsonObject.smsInformation, 'farmerMobileNumber')}|${formatNestedValue(jsonObject.smsInformation, 'companyName')}|${formatNestedValue(jsonObject.smsInformation, 'factoryName')}|${formatNestedValue(jsonObject.smsInformation, 'chequeAmount')}|${formatNestedValue(jsonObject.smsInformation, 'discountAmount')}|${formatNestedValue(jsonObject.smsInformation, 'netAmount')}|${formatNestedValue(jsonObject.smsInformation, 'farmerAccountNumber')}|${formatNestedValue(jsonObject.smsInformation, 'reference')}|${formatNestedValue(jsonObject.smsInformation, 'factoryMobileNumber')}`).join('\n');
+                `D|${formatValue(jsonObject, 'transactionId')}|${formatValue(jsonObject, 'sourceSystem')}|${formatValue(jsonObject, 'serviceCode')}|${formatValue(jsonObject, 'transactionDateTime')}|${formatValue(jsonObject, 'paymentPurpose')}|${formatValue(jsonObject, 'remark')}|${formatValue(jsonObject, 'typeOfSender')}|${formatValue(jsonObject, 'transactionAmount')}|${formatNestedValue(jsonObject.fromAccountInstruction, 'bankCode')}|${formatNestedValue(jsonObject.fromAccountInstruction, 'accountNumber')}|${formatNestedValue(jsonObject.fromAccountInstruction, 'isGl')}|${formatNestedValue(jsonObject.fromAccountInstruction, 'glNumber')}|${formatNestedValue(jsonObject.fromAccountInstruction, 'accountName')}|${formatNestedValue(jsonObject.fromAccountInstruction, 'taxId')}|${formatNestedValue(jsonObject.fromAccountInstruction, 'statementReference')}|${formatNestedValue(jsonObject.toAccountInstruction && jsonObject.toAccountInstruction.proxyInformation, 'proxyType')}|${formatNestedValue(jsonObject.toAccountInstruction && jsonObject.toAccountInstruction.proxyInformation, 'proxyValue')}|${formatNestedValue(jsonObject.toAccountInstruction, 'bankCode')}|${formatNestedValue(jsonObject.toAccountInstruction, 'accountNumber')}|${formatNestedValue(jsonObject.toAccountInstruction, 'isGl')}|${formatNestedValue(jsonObject.toAccountInstruction, 'glNumber')}|${formatNestedValue(jsonObject.toAccountInstruction, 'accountName')}|${formatNestedValue(jsonObject.toAccountInstruction, 'statementReference')}|${formatNestedValue(jsonObject.smsInformation, 'mobileNumber')}|${formatNestedValue(jsonObject.smsInformation && jsonObject.smsInformation.templateMapping, 'companyName')}|${formatNestedValue(jsonObject.smsInformation && jsonObject.smsInformation.templateMapping, 'factoryName')}|${formatNestedValue(jsonObject.smsInformation && jsonObject.smsInformation.templateMapping, 'chequeAmount')}|${formatNestedValue(jsonObject.smsInformation && jsonObject.smsInformation.templateMapping, 'discountAmount')}|${formatNestedValue(jsonObject.smsInformation && jsonObject.smsInformation.templateMapping, 'netAmount')}|${formatNestedValue(jsonObject.smsInformation && jsonObject.smsInformation.templateMapping, 'farmerAccountNumber')}|${formatNestedValue(jsonObject.smsInformation && jsonObject.smsInformation.templateMapping, 'reference')}|${formatNestedValue(jsonObject.smsInformation && jsonObject.smsInformation.templateMapping, 'factoryMobileNumber')}`).join('\n');
             // Generate footer with current date and random number
             const currentDate = new Date();
             const dateString = `${currentDate.getFullYear()}${('0' + (currentDate.getMonth() + 1)).slice(-2)}${('0' + currentDate.getDate()).slice(-2)}`;
             const randomNum = Math.floor(100000 + Math.random() * 900000); // 6-digit random number
-            csvString += `\nF|CLP${dateString}${randomNum}|${jsonArray.length}`;
+            csvString += `\nF|${sourceSystem}${dateString}${randomNum}|${jsonArray.length}`;
             document.getElementById('csvOutput').value = csvString;
         } catch (e) {
             alert('Invalid JSON input');
@@ -43,17 +50,20 @@
         return nestedObject && nestedObject[propName] != null ? nestedObject[propName] : '';
     }
 
-        function downloadCSV() {
-            const csvText = document.getElementById('csvOutput').value;
-            const element = document.createElement('a');
-            element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(csvText));
-            element.setAttribute('download', 'output.txt');
-            element.style.display = 'none';
-            document.body.appendChild(element);
-            element.click();
-            document.body.removeChild(element);
-        }
-
+    function downloadCSV() {
+        const csvText = document.getElementById('csvOutput').value;
+        const currentDate = new Date();
+        const dateString = `${currentDate.getFullYear()}${('0' + (currentDate.getMonth() + 1)).slice(-2)}${('0' + currentDate.getDate()).slice(-2)}`;
+        const timeString = `${('0' + currentDate.getHours()).slice(-2)}${('0' + currentDate.getMinutes()).slice(-2)}${('0' + currentDate.getSeconds()).slice(-2)}_${('00' + currentDate.getMilliseconds()).slice(-3)}`;
+        const fileName = `${sourceSystem}_${serviceCode}_${dateString}_${timeString}.txt`;
+        const element = document.createElement('a');
+        element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(csvText));
+        element.setAttribute('download', fileName);
+        element.style.display = 'none';
+        document.body.appendChild(element);
+        element.click();
+        document.body.removeChild(element);
+    }
 </script>
 </body>
 </html>
