--- a/rate-conversion.html
+++ b/rate-conversion.html
@@ -20,20 +20,19 @@
             background-color: #fff;
             width: 300px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            position: relative;
         }
         .converter h2 {
             margin-top: 0;
-            text-align: center;
         }
-        .converter input {
+        .converter input, .converter button {
             width: 100%;
             padding: 8px;
             margin: 10px 0;
             box-sizing: border-box;
         }
         .converter button {
-            width: 100%;
-            padding: 10px;
             background-color: #007bff;
             color: #fff;
             border: none;
@@ -42,10 +41,43 @@
         .converter button:hover {
             background-color: #0056b3;
         }
-        .result {
+        .result-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             margin-top: 10px;
+        }
+        .result {
             font-weight: bold;
-            text-align: center;
+            font-size: 1.2em;
+            margin-right: 8px;
+        }
+        .copy-icon {
+            width: 24px;
+            height: 24px;
+            cursor: pointer;
+        }
+        .copy-message {
+            margin-top: 5px;
+            color: green;
+            display: none;
+        }
+        .autocomplete-list {
+            position: absolute;
+            background-color: #fff;
+            border: 1px solid #ddd;
+            max-height: 150px;
+            overflow-y: auto;
+            width: 90%;
+            z-index: 1;
+            left: 5%;
+        }
+        .autocomplete-list div {
+            padding: 8px;
+            cursor: pointer;
+        }
+        .autocomplete-list div:hover {
+            background-color: #eee;
         }
     </style>
 </head>
@@ -53,33 +85,102 @@
 
 <div class="converter">
     <h2>Generic Currency Converter</h2>
+    
     <label for="ccyPair">Currency Pair (e.g., USDTHB, EURUSD):</label>
-    <input type="text" id="ccyPair" placeholder="Enter currency pair">
+    <input type="text" id="ccyPair" placeholder="Enter currency pair" oninput="showSuggestions('ccyPair')">
+    <div id="autocomplete-ccyPair" class="autocomplete-list"></div>
 
     <label for="amount">Amount:</label>
     <input type="number" id="amount" placeholder="Enter amount">
 
     <label for="amountCurrency">Amount Currency (e.g., USD, THB):</label>
-    <input type="text" id="amountCurrency" placeholder="Enter currency of amount">
+    <input type="text" id="amountCurrency" placeholder="Enter currency of amount" oninput="showSuggestions('amountCurrency')">
+    <div id="autocomplete-amountCurrency" class="autocomplete-list"></div>
 
     <label for="rate">Conversion Rate:</label>
     <input type="number" id="rate" placeholder="Enter rate" step="0.0001">
 
     <button onclick="convertCurrency()">Convert</button>
 
-    <div id="result" class="result"></div>
+    <div class="result-container">
+        <div id="result" class="result"></div>
+        <img src="https://img.icons8.com/ios-filled/50/000000/copy.png" alt="Copy" class="copy-icon" onclick="copyOnlyNumber()" />
+    </div>
+    <div id="copyMessage" class="copy-message">Copied!</div>
 </div>
 
 <script>
+    // List of common ISO 4217 currency codes
+const currencyCodes = [
+    "AED", "AFN", "ALL", "AMD", "ANG", "AOA", "ARS", "AUD", "AWG", "AZN",
+    "BAM", "BBD", "BDT", "BGN", "BHD", "BIF", "BMD", "BND", "BOB", "BRL",
+    "BSD", "BTN", "BWP", "BYN", "BZD", "CAD", "CDF", "CHF", "CLP", "CNY",
+    "COP", "CRC", "CUC", "CUP", "CVE", "CZK", "DJF", "DKK", "DOP", "DZD",
+    "EGP", "ERN", "ETB", "EUR", "FJD", "FKP", "FOK", "GBP", "GEL", "GGP",
+    "GHS", "GIP", "GMD", "GNF", "GTQ", "GYD", "HKD", "HNL", "HRK", "HTG",
+    "HUF", "IDR", "ILS", "IMP", "INR", "IQD", "IRR", "ISK", "JEP", "JMD",
+    "JOD", "JPY", "KES", "KGS", "KHR", "KID", "KMF", "KRW", "KWD", "KYD",
+    "KZT", "LAK", "LBP", "LKR", "LRD", "LSL", "LYD", "MAD", "MDL", "MGA",
+    "MKD", "MMK", "MNT", "MOP", "MRU", "MUR", "MVR", "MWK", "MXN", "MYR",
+    "MZN", "NAD", "NGN", "NIO", "NOK", "NPR", "NZD", "OMR", "PAB", "PEN",
+    "PGK", "PHP", "PKR", "PLN", "PYG", "QAR", "RON", "RSD", "RUB", "RWF",
+    "SAR", "SBD", "SCR", "SDG", "SEK", "SGD", "SHP", "SLE", "SLL", "SOS",
+    "SRD", "SSP", "STN", "SYP", "SZL", "THB", "TJS", "TMT", "TND", "TOP",
+    "TRY", "TTD", "TVD", "TWD", "TZS", "UAH", "UGX", "USD", "UYU", "UZS",
+    "VES", "VND", "VUV", "WST", "XAF", "XCD", "XOF", "XPF", "YER", "ZAR",
+    "ZMW", "ZWL"
+];
+
+
+    // Generate all possible pairs from currency codes
+    const currencyPairs = [];
+    for (let i = 0; i < currencyCodes.length; i++) {
+        for (let j = 0; j < currencyCodes.length; j++) {
+            if (i !== j) {
+                currencyPairs.push(currencyCodes[i] + currencyCodes[j]);
+            }
+        }
+    }
+
+    function showSuggestions(inputId) {
+        const input = document.getElementById(inputId);
+        const filter = input.value.toUpperCase();
+        const autocompleteList = document.getElementById("autocomplete-" + inputId);
+
+        // Clear existing suggestions
+        autocompleteList.innerHTML = "";
+
+        // Get the right list based on the input field
+        const list = inputId === "ccyPair" ? currencyPairs : currencyCodes;
+
+        // Filter and show matching currency pairs or codes
+        if (filter) {
+            const filteredItems = list.filter(item => item.startsWith(filter));
+            filteredItems.forEach(item => {
+                const suggestionItem = document.createElement("div");
+                suggestionItem.textContent = item;
+                suggestionItem.onclick = () => {
+                    input.value = item;
+                    autocompleteList.innerHTML = ""; // Clear suggestions
+                };
+                autocompleteList.appendChild(suggestionItem);
+            });
+        }
+    }
+
+    let convertedAmountText = '';  // To store only the number for copying
+
     function convertCurrency() {
         const ccyPair = document.getElementById("ccyPair").value.toUpperCase();
         const amount = parseFloat(document.getElementById("amount").value);
         const amountCurrency = document.getElementById("amountCurrency").value.toUpperCase();
         const rate = parseFloat(document.getElementById("rate").value);
         let result = document.getElementById("result");
+        let copyMessage = document.getElementById("copyMessage");
 
         if (!ccyPair || isNaN(amount) || isNaN(rate) || !amountCurrency) {
             result.innerText = "Please fill in all fields correctly.";
+            copyMessage.style.display = "none";
             return;
         }
 
@@ -87,8 +188,9 @@
         const baseCurrency = ccyPair.slice(0, 3);
         const targetCurrency = ccyPair.slice(3);
 
-        if (ccyPair.length !== 6 || amountCurrency !== baseCurrency && amountCurrency !== targetCurrency) {
+        if (ccyPair.length !== 6 || (amountCurrency !== baseCurrency && amountCurrency !== targetCurrency)) {
             result.innerText = "Please enter a valid currency pair (e.g., USDTHB) and matching amount currency.";
+            copyMessage.style.display = "none";
             return;
         }
 
@@ -98,12 +200,27 @@
             // Convert from base to target currency
             convertedAmount = amount * rate;
             result.innerText = `Converted Amount: ${convertedAmount.toFixed(2)} ${targetCurrency}`;
+            convertedAmountText = convertedAmount.toFixed(2); // Store only the numeric value
         } else if (amountCurrency === targetCurrency) {
             // Convert from target to base currency
             convertedAmount = amount / rate;
             result.innerText = `Converted Amount: ${convertedAmount.toFixed(2)} ${baseCurrency}`;
-        } else {
-            result.innerText = "Please ensure the amount currency matches the currency pair.";
+            convertedAmountText = convertedAmount.toFixed(2); // Store only the numeric value
+        }
+
+        // Hide copy message initially
+        copyMessage.style.display = "none";
+    }
+
+    function copyOnlyNumber() {
+        if (convertedAmountText) {
+            navigator.clipboard.writeText(convertedAmountText).then(() => {
+                const copyMessage = document.getElementById("copyMessage");
+                copyMessage.style.display = "block";
+                setTimeout(() => {
+                    copyMessage.style.display = "none";
+                }, 1500);
+            });
         }
     }
 </script>
