--- a/v3/objectParser.html
+++ b/v3/objectParser.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Data Formatter</title>
+    <title>Data Formatter With Length</title>
     <link rel="icon" type="image/png" href="resources/img/anya_icon.jpg">
     <style>
         /* Global Styles */
