--- a/json-beautify.html
+++ b/json-beautify.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>JSON Beautifier</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-jsonview/1.2.3/jquery.jsonview.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -19,32 +18,45 @@
             margin-top: 10px;
             padding: 8px 16px;
         }
-        pre {
+        #output {
             background-color: #f4f4f4;
             padding: 10px;
             overflow: auto;
             margin-top: 10px;
+            font-family: monospace;
         }
     </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-jsonview/1.2.3/jquery.jsonview.min.js"></script>
 </head>
 <body>
     <h1>JSON Beautifier</h1>
     <textarea id="jsonInput" placeholder="Paste your JSON here"></textarea>
     <br>
-    <button onclick="beautify()">Beautify JSON</button>
-    <pre><code id="output" class="json"></code></pre>
+    <button id="beautifyBtn">Beautify JSON</button>
+    <button id="expandAll" style="display:none;">Expand All</button>
+    <button id="collapseAll" style="display:none;">Collapse All</button>
+    <div id="output"></div>
     <script>
-        function beautify() {
-            const input = document.getElementById('jsonInput').value;
-            const outputEl = document.getElementById('output');
+        $('#beautifyBtn').on('click', function () {
+            const input = $('#jsonInput').val();
             try {
                 const obj = JSON.parse(input);
-                outputEl.textContent = JSON.stringify(obj, null, 2);
-                hljs.highlightElement(outputEl);
+                $('#output').JSONView(obj);
+                $('#expandAll, #collapseAll').show();
             } catch (e) {
-                outputEl.textContent = 'Invalid JSON: ' + e.message;
+                $('#output').text('Invalid JSON: ' + e.message);
+                $('#expandAll, #collapseAll').hide();
             }
-        }
+        });
+
+        $('#expandAll').on('click', function () {
+            $('#output').JSONView('expand');
+        });
+
+        $('#collapseAll').on('click', function () {
+            $('#output').JSONView('collapse');
+        });
     </script>
 </body>
 </html>
