--- a/v3/objectParser.html
+++ b/v3/objectParser.html
@@ -7,18 +7,19 @@
         /* Global Styles */
         body {
             font-family: Arial, sans-serif;
-            background-color: #f9f9f9;
+            background: linear-gradient(135deg, #e0e7ff, #fdfbff);
             margin: 0;
             padding: 0;
             color: #333;
+            min-height: 100vh;
         }
         .container {
             max-width: 800px;
             margin: 40px auto;
             background: #fff;
-            padding: 20px 30px;
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
         }
         h2 {
             text-align: center;
@@ -33,6 +34,7 @@
         .controls label {
             margin-right: 15px;
             font-size: 1rem;
+            font-weight: 600;
         }
         textarea {
             width: 100%;
@@ -43,6 +45,7 @@
             border-radius: 4px;
             resize: vertical;
             margin-bottom: 15px;
+            box-sizing: border-box;
         }
         button {
             padding: 10px 25px;
@@ -52,16 +55,20 @@
             border: none;
             border-radius: 4px;
             cursor: pointer;
-            transition: background-color 0.3s ease;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+            transition: background-color 0.3s ease, box-shadow 0.3s ease;
         }
         button:hover {
             background-color: #357ae8;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.2);
         }
         /* Table Styles */
         table {
             border-collapse: collapse;
             width: 100%;
             margin-top: 20px;
+            border-radius: 6px;
+            overflow: hidden;
         }
         table, th, td {
             border: 1px solid #ddd;
@@ -72,6 +79,9 @@
         }
         th {
             background-color: #f2f2f2;
+        }
+        tr:nth-child(even) {
+            background-color: #f9f9f9;
         }
         #output {
             margin-top: 20px;
