Add navigation bar and landing page

--- a/aes-256-gcm.html
+++ b/aes-256-gcm.html
@@ -21,6 +21,9 @@
     </style>
 </head>
 <body>
+<nav style="margin-bottom:20px;background:#f0f0f0;padding:10px;border-radius:4px;">
+ <a href="index.html">Home</a> | <a href="javascript:history.back()">Back</a>
+</nav>
     <h1>JWE Encryption/Decryption</h1>
     <label for="payload">Payload:</label>
     <textarea id="payload" rows="4"></textarea>
