--- a/generateReportCSV.html
+++ b/generateReportCSV.html
@@ -9,6 +9,9 @@
     </style>
 </head>
 <body>
+<nav style="margin-bottom:20px;background:#f0f0f0;padding:10px;border-radius:4px;">
+ <a href="index.html">Home</a> | <a href="javascript:history.back()">Back</a>
+</nav>
 <h1>JSON to CSV Converter with Download</h1>
 <textarea id="jsonInput" placeholder="Enter list of JSON objects here..."></textarea>
 <div>
