--- a/log-formatter-v2.html
+++ b/log-formatter-v2.html
@@ -56,6 +56,9 @@
     </style>
 </head>
 <body>
+<nav style="margin-bottom:20px;background:#f0f0f0;padding:10px;border-radius:4px;">
+ <a href="index.html">Home</a> | <a href="javascript:history.back()">Back</a>
+</nav>
 
 <div class="container">
     <h1>Upload JSON Log File or Enter JSON Text</h1>
