--- a/rate-conversion.html
+++ b/rate-conversion.html
@@ -82,6 +82,9 @@
     </style>
 </head>
 <body>
+<nav style="margin-bottom:20px;background:#f0f0f0;padding:10px;border-radius:4px;">
+ <a href="index.html">Home</a> | <a href="javascript:history.back()">Back</a>
+</nav>
 
 <div class="converter">
     <h2>Generic Currency Converter</h2>
