--- a/data formatter v2.html
+++ b/data formatter v2.html
@@ -8,6 +8,9 @@
     </style>
 </head>
 <body>
+<nav style="margin-bottom:20px;background:#f0f0f0;padding:10px;border-radius:4px;">
+ <a href="index.html">Home</a> | <a href="javascript:history.back()">Back</a>
+</nav>
     <h2>Data Formatter</h2>
     <label><input type="radio" name="dataType" value="xml" checked> XML</label>
     <label><input type="radio" name="dataType" value="json"> JSON</label><br>
