--- a/json-beautify.html
+++ b/json-beautify.html
@@ -60,6 +60,9 @@
     </style>
 </head>
 <body class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-100 transition-colors duration-300">
+<nav style="margin-bottom:20px;background:#f0f0f0;padding:10px;border-radius:4px;">
+ <a href="index.html">Home</a> | <a href="javascript:history.back()">Back</a>
+</nav>
 
     <div class="container mx-auto p-4 max-w-7xl">
 
