--- a/stock-dr-convertion.html
+++ b/stock-dr-convertion.html
@@ -44,6 +44,9 @@
     </style>
 </head>
 <body>
+<nav style="margin-bottom:20px;background:#f0f0f0;padding:10px;border-radius:4px;">
+ <a href="index.html">Home</a> | <a href="javascript:history.back()">Back</a>
+</nav>
 
 <h2>DR Price Calculator</h2>
 <form id="drCalculator">
