--- a/timeout-simulator.html
+++ b/timeout-simulator.html
@@ -19,6 +19,9 @@
     </style>
 </head>
 <body>
+<nav style="margin-bottom:20px;background:#f0f0f0;padding:10px;border-radius:4px;">
+ <a href="index.html">Home</a> | <a href="javascript:history.back()">Back</a>
+</nav>
     <h1>Timeout Simulator</h1>
     <label>
         Delay (ms):
