--- a/v3/objectParser.html
+++ b/v3/objectParser.html
@@ -89,6 +89,9 @@
     </style>
 </head>
 <body>
+<nav style="margin-bottom:20px;background:#f0f0f0;padding:10px;border-radius:4px;">
+ <a href="../index.html">Home</a> | <a href="javascript:history.back()">Back</a>
+</nav>
     <div class="container">
         <h2>Data Formatter</h2>
         <div class="controls">
