Refine landing page with icons and descriptions

--- a/data formatter v2.html
+++ b/data formatter v2.html
@@ -8,6 +8,7 @@
     </style>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4"><div class="container-fluid"><a class="navbar-brand" href="index.html">Home</a><button class="btn btn-outline-light" onclick="history.back()">Back</button></div></nav>
     <h2>Data Formatter</h2>
     <label><input type="radio" name="dataType" value="xml" checked> XML</label>
     <label><input type="radio" name="dataType" value="json"> JSON</label><br>
