--- a/aes-256-gcm.html
+++ b/aes-256-gcm.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>JWE Encryption/Decryption</title>
     <script src="https://cdn.jsdelivr.net/npm/jose@3.14.0/dist/browser/jose.min.js"></script>
     <style>
@@ -21,7 +23,7 @@
     </style>
 </head>
 <body>
-    <h1>JWE Encryption/Decryption</h1>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4"><div class="container-fluid"><a class="navbar-brand" href="index.html">Home</a><button class="btn btn-outline-light" onclick="history.back()">Back</button></div></nav>
     <label for="payload">Payload:</label>
     <textarea id="payload" rows="4"></textarea>
     
