--- a/generateReportCSV.html
+++ b/generateReportCSV.html
@@ -9,6 +9,7 @@
     </style>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4"><div class="container-fluid"><a class="navbar-brand" href="index.html">Home</a><button class="btn btn-outline-light" onclick="history.back()">Back</button></div></nav>
 <h1>JSON to CSV Converter with Download</h1>
 <textarea id="jsonInput" placeholder="Enter list of JSON objects here..."></textarea>
 <div>
