--- a/log-formatter-v2.html
+++ b/log-formatter-v2.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>JSON Log to HTML Table</title>
     <style>
         body {
@@ -56,6 +58,7 @@
     </style>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4"><div class="container-fluid"><a class="navbar-brand" href="index.html">Home</a><button class="btn btn-outline-light" onclick="history.back()">Back</button></div></nav>
 
 <div class="container">
     <h1>Upload JSON Log File or Enter JSON Text</h1>
