--- a/rate-conversion.html
+++ b/rate-conversion.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Generic Currency Converter</title>
     <style>
         body {
@@ -82,6 +84,7 @@
     </style>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4"><div class="container-fluid"><a class="navbar-brand" href="index.html">Home</a><button class="btn btn-outline-light" onclick="history.back()">Back</button></div></nav>
 
 <div class="converter">
     <h2>Generic Currency Converter</h2>
