--- a/stock-dr-convertion.html
+++ b/stock-dr-convertion.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>DR Price Calculator</title>
     <style>
         body {
@@ -44,6 +46,7 @@
     </style>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4"><div class="container-fluid"><a class="navbar-brand" href="index.html">Home</a><button class="btn btn-outline-light" onclick="history.back()">Back</button></div></nav>
 
 <h2>DR Price Calculator</h2>
 <form id="drCalculator">
