--- a/v3/objectParser.html
+++ b/v3/objectParser.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title>Data Formatter With Length</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../style.css">
     <link rel="icon" type="image/png" href="resources/img/anya_icon.jpg">
     <style>
         /* Global Styles */
@@ -89,6 +92,7 @@
     </style>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4"><div class="container-fluid"><a class="navbar-brand" href="../index.html">Home</a><button class="btn btn-outline-light" onclick="history.back()">Back</button></div></nav>
     <div class="container">
         <h2>Data Formatter</h2>
         <div class="controls">
