--- a/aes-256-gcm.html
+++ b/aes-256-gcm.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="global.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JWE Encryption/Decryption</title>
     <script src="https://cdn.jsdelivr.net/npm/jose@3.14.0/dist/browser/jose.min.js"></script>
@@ -21,7 +22,7 @@
     </style>
 </head>
 <body>
-<nav style="margin-bottom:20px;background:#f0f0f0;padding:10px;border-radius:4px;">
+<nav class="simple-nav">
  <a href="index.html">Home</a> | <a href="javascript:history.back()">Back</a>
 </nav>
     <h1>JWE Encryption/Decryption</h1>
