--- a/data formatter v2.html
+++ b/data formatter v2.html
@@ -2,13 +2,14 @@
 <html>
 <head>
     <title>Data Formatter</title>
-	<link rel="icon" type="image/png" href="resources/img/anya_icon.jpg">
+    <link rel="stylesheet" href="global.css">
+        <link rel="icon" type="image/png" href="resources/img/anya_icon.jpg">
     <style>
 
     </style>
 </head>
 <body>
-<nav style="margin-bottom:20px;background:#f0f0f0;padding:10px;border-radius:4px;">
+<nav class="simple-nav">
  <a href="index.html">Home</a> | <a href="javascript:history.back()">Back</a>
 </nav>
     <h2>Data Formatter</h2>
