--- a/generateReportCSV.html
+++ b/generateReportCSV.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="global.css">
     <title>JSON to CSV Converter with Download</title>
     <style>
         textarea { width: 300px; height: 200px; }
@@ -9,7 +10,7 @@
     </style>
 </head>
 <body>
-<nav style="margin-bottom:20px;background:#f0f0f0;padding:10px;border-radius:4px;">
+<nav class="simple-nav">
  <a href="index.html">Home</a> | <a href="javascript:history.back()">Back</a>
 </nav>
 <h1>JSON to CSV Converter with Download</h1>
