--- a/json-beautify.html
+++ b/json-beautify.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="global.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advanced JSON Tools</title>
     <!-- Tailwind CSS for styling -->
@@ -60,7 +61,7 @@
     </style>
 </head>
 <body class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-100 transition-colors duration-300">
-<nav style="margin-bottom:20px;background:#f0f0f0;padding:10px;border-radius:4px;">
+<nav class="simple-nav">
  <a href="index.html">Home</a> | <a href="javascript:history.back()">Back</a>
 </nav>
 
