--- a/v3/objectParser.html
+++ b/v3/objectParser.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Data Formatter With Length</title>
+    <link rel="stylesheet" href="../global.css">
     <link rel="icon" type="image/png" href="resources/img/anya_icon.jpg">
     <style>
         /* Global Styles */
@@ -89,7 +90,7 @@
     </style>
 </head>
 <body>
-<nav style="margin-bottom:20px;background:#f0f0f0;padding:10px;border-radius:4px;">
+<nav class="simple-nav">
  <a href="../index.html">Home</a> | <a href="javascript:history.back()">Back</a>
 </nav>
     <div class="container">
