--- a/index.html
+++ b/index.html
@@ -159,6 +159,16 @@
                 </div>
             </a>
         </div>
+        <div class="col tool-item">
+            <a href="bahtnet-template.html" class="card h-100 text-decoration-none tool-card">
+                <div class="card-body text-center p-4">
+                    <i class="bi bi-bank display-4"></i>
+                    <h5 class="card-title mt-3">BAHTNET Template Viewer</h5>
+                    <p class="card-text small text-muted">View payment templates and fees.</p>
+                </div>
+            </a>
+        </div>
+        </div>
     </div>
 </div>
 
