--- a/index.html
+++ b/index.html
@@ -168,6 +168,15 @@
                 </div>
             </a>
         </div>
+        <div class="col tool-item">
+            <a href="smart-media-clearing.html" class="card h-100 text-decoration-none tool-card">
+                <div class="card-body text-center p-4">
+                    <i class="bi bi-diagram-3 display-4"></i>
+                    <h5 class="card-title mt-3">Smart Media Clearing</h5>
+                    <p class="card-text small text-muted">Scenario viewer and calculator.</p>
+                </div>
+            </a>
+        </div>
         </div>
     </div>
 </div>
