--- a/resume-wirawan.html
+++ b/resume-wirawan.html
@@ -32,7 +32,7 @@
         <!-- Header Section -->
         <header class="text-center mb-8">
             <h1 class="text-3xl sm:text-4xl lg:text-5xl font-extrabold text-gray-800 mb-2">WIRAWAN NANTI</h1>
-            <p class="text-md sm:text-lg text-gray-600">Bangkok, Thailand | choichommi@gmil.com | 0646566969</p>
+            <p class="text-md sm:text-lg text-gray-600">Bangkok, Thailand | choichommi@gmail.com | 0646566969</p>
         </header>
 
         <!-- Summary Section -->
