--- a/Dynatrace JSON Log Viewer with Summary View.html
+++ b/Dynatrace JSON Log Viewer with Summary View.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive JSON Log Viewer</title>
+    <title>Dynatrace JSON Log Viewer with Summary View</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Fira+Code:wght@400;500&display=swap" rel="stylesheet">
     <style>
@@ -103,7 +103,7 @@
 <body class="antialiased">
     <div class="container mx-auto p-4 md:p-8 max-w-7xl">
         <header class="text-center mb-8">
-            <h1 class="text-3xl md:text-4xl font-bold text-white">Interactive JSON Log Viewer</h1>
+            <h1 class="text-3xl md:text-4xl font-bold text-white">Dynatrace JSON Log Viewer with Summary View</h1>
             <p class="text-gray-400 mt-2">Paste your JSON log below to parse and explore it.</p>
         </header>
 
