--- a/Dynatrace JSON Log Viewer with Summary View.html
+++ b/Dynatrace JSON Log Viewer with Summary View.html
@@ -262,6 +262,8 @@
                 'message.serviceName',
                 'message.serviceType',
                 'message.statusCode',
+                'message.processStartTime',
+                'message.processingTime',
                 'message.requestData',
                 'message.responseData'
             ];
