feat: add PMCS result loader tool

--- a/index.html
+++ b/index.html
@@ -186,6 +186,15 @@
                 </div>
             </a>
         </div>
+        <div class="col tool-item">
+            <a href="PMCS Result files Data Loading.html" class="card h-100 text-decoration-none tool-card">
+                <div class="card-body text-center p-4">
+                    <i class="bi bi-filetype-txt display-4"></i>
+                    <h5 class="card-title mt-3">PMCS Result files Data Loading</h5>
+                    <p class="card-text small text-muted">Generate fixed-length lines from PMCS JSON results.</p>
+                </div>
+            </a>
+        </div>
         </div>
     </div>
 </div>
